# bazeltest

./: .bazelignore  pnpm-lock.yaml
package/app/: BUILD.bazel  package.json  vite.config.js
package/app/src/: app.jsx
package/numbers/: BUILD.bazel  index.ts
package/ts/: BUILD.bazel
package/vanilla_js/: BUILD.bazel  index.js
